--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
     <div id="root"></div>
+    <!-- FontAwesome kit -->
+    <script src="https://kit.fontawesome.com/9c5bef68e2.js" crossorigin="anonymous"></script>
+    
     <!-- BootStrap JS  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
   </body>
