--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
     <!-- BootStrap CSS  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   
-    <title>iNoteBook - Secured Notes in the Cloud</title>
+    <title>OwnNote - Secured Notes in the Cloud</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
